* switched to config grammar 1.10  -- tobi

* make sure reload_config reloads in any case even when the config has not changed ... 
  with this we solve the problem that maybe some @include configs have changed
  which we would not find out otherwise -- tobi

* updated cropper: when selecting something outside the graph, multiply by 10. Use this to zoom out -- tobi

2007/9/16 -- released version 2.2.4

* Fixed zooming mode in multi host graphs -- tobi
* Warn when smokeping uses takes over 80% of the time available for a polling cycle -- tobi
* don't complain when there is no data in a graph yet while calculation stddev -- tobi
* in a multihost graph take the number of pings for each component into consideration  -- tobi
* fixed problem with rounding error in calculating stddev -- tobi
* include the prototype.js license for completeness -- niko
* fix Smokeping.pm POD documentation -- niko

2007/9/06 -- released version 2.2.3
* alter ajax grapher mode to use seconds timestamps and not iso dates
  this prevents timezone problems with the browser -- tobi
* 1.2 is required now ... -- tobi
* make sure start is before end in the cropper zoom -- tobi
* better documentation on multihost syntax added -- tobi
* slaves should skip multi target hosts -- tobi
* set Content-Length header to help multi request queries -- tobi

2007/8/30 -- released version 2.2.2
* fixed links to slave graphs from chart mode -- tobi
* minor cosmetic fixes -- tobi

2007/8/30 -- released version 2.2.1
* minor cosmetic fixes -- tobi

2007/08/30 -- released version 2.2.0
*** all the new features in this release has been done under contract with DynDNS ***

* Added multi-host function (show data from several links in one graph) -- tobi
* Added stddev caclulation -- tobi
* Added slave support into detail graphs -- tobi
* Made interactive Graph zoomer somewhat work on ie6 and ie7 -- tobi
* Integrated interactive Graph zoomer -- Roman Plessl rplessl oetiker.ch